Remove RequestLoggingFilter and ZGenerational flag